Fixed a contact form overflow issue on mobile

--- a/assets/css/addedcss.css
+++ b/assets/css/addedcss.css
@@ -85,6 +85,9 @@ a:visited{
     .contactmeheadermobile{
         display: none;
     }
+    .contactmeformmobile{
+        display: none;
+    }
     .mobilecontact{
         display: none;
     }
