--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2314,6 +2314,7 @@ button,
   align-items: center;
   border-style: solid;
   border-color: black;
+  max-width: 30rem;
 }
 .dispoh3{
   font-size: 1em;
@@ -2321,4 +2322,5 @@ button,
 }
 textarea{
   margin-bottom: .8rem;
+  min-width: 100%;;
 }
